tests/functional/lang/eval-fail-scope-5.err.exp
error:
       … while evaluating the attribute 'body'
         at /pwd/lang/eval-fail-scope-5.nix:8:3:
            7|
            8|   body = f {};
             |   ^
            9|

       … from call site at 8:10:
            7|
            8|   body = f {};
             |          ^
            9|

       … while calling 'f' at 6:7:
            5|
            6|   f = {x ? y, y ? x}: x + y;
             |       ^
            7|

       error: infinite recursion encountered at 6:12:
            5|
            6|   f = {x ? y, y ? x}: x + y;
             |            ^
            7|
